--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,32 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
+# 环境变量
+.env
+.env.local
+.env.*.local
+
+# 日志文件
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+
+# IDE 文件
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 部署文件
+.vercel
+.netlify
+.firebase
+
+# 临时文件
+*.tmp
+*.temp
