update deploy document

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,23 @@ jobs:
 
       - name: List build output (Debug)
         run: |
-          echo "Build directory contents:"
+          echo "=== Build directory contents ==="
           ls -la dist/
-          echo "Total files in dist:"
+          echo ""
+          echo "=== Total files in dist ==="
           find dist/ -type f | wc -l
+          echo ""
+          echo "=== index.html content ==="
+          cat dist/index.html
+          echo ""
+          echo "=== assets directory ==="
+          ls -la dist/assets/
+          echo ""
+          echo "=== All files in dist ==="
+          find dist/ -type f -exec ls -la {} \;
+
+      - name: Add .nojekyll file
+        run: touch dist/.nojekyll
 
       - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v3
