--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,16 @@ jobs:
           npm install --prefer-offline --no-audit
           npm install @rollup/rollup-linux-x64-gnu --save-dev
 
+      - name: Debug environment variables
+        run: |
+          echo "Checking environment variables:"
+          echo "VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY != '' && '✅ Set' || '❌ Missing' }}"
+          echo "VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN != '' && '✅ Set' || '❌ Missing' }}"
+          echo "VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID != '' && '✅ Set' || '❌ Missing' }}"
+          echo "VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_FIREBASE_STORAGE_BUCKET != '' && '✅ Set' || '❌ Missing' }}"
+          echo "VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID != '' && '✅ Set' || '❌ Missing' }}"
+          echo "VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID != '' && '✅ Set' || '❌ Missing' }}"
+
       - name: Build project
         run: npm run build
         env:
